--- a/.gitignore
+++ b/.gitignore
@@ -158,7 +158,7 @@ wandb/
 # output folder
 output/
 
-scratch/
+/scratch
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
